# cnft-utxo

./: .dockerignore  .gitignore  Dockerfile  README.md  cabal.project  clean-up.sh  create-metadata.sh  docker-build.sh  docker-run.sh  docker-start.sh  hie.yaml  mint-token-cli.sh  nft.cabal
app/: mint-token.hs  monitor.hs  payment-key-hash.hs  stake-key-hash.hs  token-name.hs  token-pab.hs  token-policy.hs
inputs/: metadata-example.json
scripts/: build-nft-binaries-store.sh  create-metadata.sh
scripts/mint/: clean-up.sh  create-metadata.sh  mint-token-cli.sh
src/Tools/: Monitor.hs  PAB.hs  Trace.hs  Utils.hs
src/Tools/Token/: OffChain.hs  OnChain.hs
