Cabal-Version:      2.4
Name:               nft
Version:            0.1.0.0
Author:              William Wolff
Maintainer:          william.wolff@iohk.io
Build-Type:          Simple
Copyright:           © 2021 William Wolff
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Tools.Monitor
                       Tools.PAB
                       Tools.Token.OffChain
                       Tools.Token.OnChain
                       Tools.Trace
                       Tools.Utils
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , cardano-crypto-class
                     , cardano-ledger-core
                     , cardano-ledger-shelley
                     , cardano-wallet-core
                     , containers
                     , data-default
                     , freer-extras
                     , openapi3
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-pab
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , serialise
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

-- executable token-pab
--   main-is: token-pab.hs
--   hs-source-dirs:      app
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       aeson
--                      , base ^>= 4.14.1.0
--                      , data-default
--                      , freer-extras
--                      , freer-simple
--                      , plutus-contract
--                      , plutus-ledger
--                      , plutus-ledger-constraints
--                      , plutus-pab
--                      , nft
--                      , plutus-use-cases
--                      , text

-- executable mint-token
--   main-is: mint-token.hs
--   hs-source-dirs:      app
--   ghc-options:         -Wall
--   build-depends:       base ^>= 4.14.1.0
--                      , plutus-contract
--                      , plutus-pab
--                      , nft
--                      , req ^>= 3.9.0

-- executable monitor
--   main-is: monitor.hs
--   hs-source-dirs:      app
--   ghc-options:         -Wall
--   build-depends:       aeson
--                      , base ^>= 4.14.1.0
--                      , plutus-contract
--                      , plutus-ledger-api
--                      , plutus-pab
--                      , nft
--                      , req ^>= 3.9.0
--                      , text

-- executable payment-key-hash
--   main-is: payment-key-hash.hs
--   hs-source-dirs:      app
--   ghc-options:         -Wall
--   build-depends:       base ^>= 4.14.1.0
--                      , nft

-- executable stake-key-hash
--   main-is: stake-key-hash.hs
--   hs-source-dirs:      app
--   ghc-options:         -Wall
--   build-depends:       base ^>= 4.14.1.0
--                      , nft

executable token-policy
  main-is: token-policy.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , nft

executable token-name
  main-is: token-name.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , nft
